@@ -1,15 +1,15 @@
 package net.stirdrem.overgeared.item.custom;
 
 import net.minecraft.ChatFormatting;
-import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
-import net.minecraft.world.item.*;
-import net.minecraft.world.level.Level;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.TooltipFlag;
 import net.stirdrem.overgeared.BlueprintQuality;
-import net.stirdrem.overgeared.OvergearedMod;
+import net.stirdrem.overgeared.components.BlueprintData;
+import net.stirdrem.overgeared.components.ModComponents;
 import net.stirdrem.overgeared.item.ToolType;
 import net.stirdrem.overgeared.item.ToolTypeRegistry;
-import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
 
@@ -20,88 +20,49 @@ public class BlueprintItem extends Item {
     }
 
     @Override
-    public ItemStack getDefaultInstance() {
-        ItemStack stack = super.getDefaultInstance();
-        CompoundTag tag = stack.getOrCreateTag();
-
-        // Set default quality to POOR
-        tag.putString("Quality", BlueprintQuality.POOR.name());
-        tag.putInt("Uses", 0);
-        tag.putInt("UsesToLevel", getUsesToNextLevel(BlueprintQuality.POOR));
-
-        // Set default tool type to first available or SWORD
-        List<ToolType> types = ToolTypeRegistry.getRegisteredTypesAll();
-        tag.putString("ToolType", !types.isEmpty() ? types.get(0).getId() : "SWORD");
-
-        return stack;
-    }
-
-    @Override
-    public void appendHoverText(ItemStack stack, @Nullable Level level,
+    public void appendHoverText(ItemStack stack, TooltipContext context,
                                 List<Component> tooltip, TooltipFlag flag) {
-        super.appendHoverText(stack, level, tooltip, flag);
+        super.appendHoverText(stack, context, tooltip, flag);
 
-        CompoundTag tag = stack.getTag();
-        if (tag == null) return;
+        BlueprintData data = stack.get(ModComponents.BLUEPRINT_DATA);
+        if (data == null) return;
 
-        // Only show quality/progress if both tags are present
-        if (tag.contains("Quality")) {
-            BlueprintQuality quality = getQuality(stack);
+        // Show quality
+        BlueprintQuality quality = data.getQualityEnum();
+        tooltip.add(Component.translatable("tooltip.overgeared.blueprint.quality")
+                .withStyle(ChatFormatting.GRAY)
+                .append(Component.translatable(quality.getTranslationKey()).withStyle(quality.getColor())));
 
-            tooltip.add(Component.translatable("tooltip.overgeared.blueprint.quality")
-                    .withStyle(ChatFormatting.GRAY)
-                    .append(Component.translatable(quality.getTranslationKey()).withStyle(quality.getColor())));
-
-            if (quality == BlueprintQuality.PERFECT || quality == BlueprintQuality.MASTER) {
-                tooltip.add(Component.translatable("tooltip.overgeared.blueprint.maxlevel")
-                        .withStyle(ChatFormatting.LIGHT_PURPLE));
-            }
+        if (quality == BlueprintQuality.PERFECT || quality == BlueprintQuality.MASTER) {
+            tooltip.add(Component.translatable("tooltip.overgeared.blueprint.maxlevel")
+                    .withStyle(ChatFormatting.LIGHT_PURPLE));
+        } else {
+            // Show progress
+            tooltip.add(Component.translatable("tooltip.overgeared.blueprint.progress", data.uses(), data.usesToLevel())
+                    .withStyle(ChatFormatting.GRAY));
         }
 
-        if (tag.contains("Uses")) {
-            int uses = getUses(stack);
-            int usesToLevel = getUsesToNextLevel(stack);
+        // Show tool type
+        ToolType toolType = getToolType(stack);
+        tooltip.add(Component.translatable("tooltip.overgeared.blueprint.tool_type").withStyle(ChatFormatting.GRAY)
+                .append(toolType.getDisplayName().withStyle(ChatFormatting.BLUE)));
 
-            if (!tag.contains("Quality") || (getQuality(stack) != BlueprintQuality.PERFECT && getQuality(stack) != BlueprintQuality.MASTER)) {
-                tooltip.add(Component.translatable("tooltip.overgeared.blueprint.progress", uses, usesToLevel)
-                        .withStyle(ChatFormatting.GRAY));
-            }
-        }
-
-        // ToolType line only if present
-        if (tag.contains("ToolType")) {
-            ToolType toolType = getToolType(stack);
-            tooltip.add(Component.translatable("tooltip.overgeared.blueprint.tool_type").withStyle(ChatFormatting.GRAY)
-                    .append(toolType.getDisplayName().withStyle(ChatFormatting.BLUE)));
-        }
-
-        if (tag.contains("Required")) {
-            boolean required = tag.getBoolean("Required");
-
-            tooltip.add(Component.translatable(
-                    required
-                            ? "tooltip.overgeared.blueprint.required"
-                            : "tooltip.overgeared.blueprint.optional"
-            ).withStyle(required ? ChatFormatting.RED : ChatFormatting.GRAY));
+        // Show required status
+        if (data.required()) {
+            tooltip.add(Component.translatable("tooltip.overgeared.blueprint.required")
+                    .withStyle(ChatFormatting.RED));
         }
     }
-
 
     public static BlueprintQuality getQuality(ItemStack stack) {
-        CompoundTag tag = stack.getTag();
-        if (tag == null || !tag.contains("Quality")) {
-            return BlueprintQuality.POOR; // Default to POOR if not set
-        }
-        try {
-            return BlueprintQuality.fromString(tag.getString("Quality"));
-        } catch (IllegalArgumentException e) {
-            return BlueprintQuality.POOR; // Default to POOR if invalid
-        }
+        BlueprintData data = stack.get(ModComponents.BLUEPRINT_DATA);
+        if (data == null) return BlueprintQuality.POOR;
+        return data.getQualityEnum();
     }
 
     public static int getUses(ItemStack stack) {
-        CompoundTag tag = stack.getTag();
-        return tag != null ? tag.getInt("Uses") : 0; // Default to 0 uses
+        BlueprintData data = stack.get(ModComponents.BLUEPRINT_DATA);
+        return data == null ? 0 : data.uses();
     }
 
     public static int getUsesToNextLevel(ItemStack stack) {
@@ -109,17 +70,27 @@ public class BlueprintItem extends Item {
     }
 
     public static ToolType getToolType(ItemStack stack) {
-        CompoundTag tag = stack.getTag();
-
-        if (tag == null || !tag.contains("ToolType")) {
+        BlueprintData data = stack.get(ModComponents.BLUEPRINT_DATA);
+        if (data == null || data.toolType().isEmpty()) {
             List<ToolType> types = ToolTypeRegistry.getRegisteredTypesAll();
-            return !types.isEmpty() ? types.get(0) : ToolType.SWORD;
+            return !types.isEmpty() ? types.getFirst() : ToolType.SWORD;
         }
-
-        String id = tag.getString("ToolType");
-        return ToolTypeRegistry.byId(id).orElse(ToolType.SWORD);
+        return ToolTypeRegistry.byId(data.toolType()).orElse(ToolType.SWORD);
     }
 
+    public static void setDefaultData(ItemStack stack) {
+        List<ToolType> types = ToolTypeRegistry.getRegisteredTypesAll();
+        String defaultToolType = !types.isEmpty() ? types.getFirst().getId() : "sword";
+        
+        BlueprintData data = new BlueprintData(
+                BlueprintQuality.POOR.name(),
+                defaultToolType,
+                0,
+                getUsesToNextLevel(BlueprintQuality.POOR),
+                false
+        );
+        stack.set(ModComponents.BLUEPRINT_DATA, data);
+    }
 
     public static void cycleToolType(ItemStack stack) {
         List<ToolType> available = ToolTypeRegistry.getRegisteredTypesAll();
@@ -129,7 +100,8 @@ public class BlueprintItem extends Item {
         int currentIndex = available.indexOf(current);
         int nextIndex = (currentIndex + 1) % available.size();
 
-        stack.getOrCreateTag().putString("ToolType", available.get(nextIndex).getId());
+        BlueprintData data = stack.getOrDefault(ModComponents.BLUEPRINT_DATA, BlueprintData.createDefault());
+        stack.set(ModComponents.BLUEPRINT_DATA, data.withToolType(available.get(nextIndex).getId()));
     }
 
     private static int getUsesToNextLevel(BlueprintQuality quality) {
@@ -141,14 +113,4 @@ public class BlueprintItem extends Item {
             case MASTER -> BlueprintQuality.MASTER.getUse();
         };
     }
-
-   /* @Override
-    public boolean hasCraftingRemainingItem(ItemStack stack) {
-        return true;
-    }
-
-    @Override
-    public ItemStack getCraftingRemainingItem(ItemStack itemStack) {
-        return itemStack.copy();
-    }*/
 }
